# SatInfo

./: .clang-format  .gitignore  CMakeLists.txt  workspace.code-workspace
Src/: CMakeLists.txt  main.cpp
Src/Backend/: Backend.cpp  Backend.h  CMakeLists.txt
Src/Backend/Data/: DataParser.cpp  DataParser.h
Src/Backend/Data/DataSets/: BoxCat.h  GenericCat.h
Src/Backend/DataParser/: DataParser.cpp  DataParser.h
Src/Backend/Interfaces/: IObserver.h  ISubject.h
Src/Backend/Log/: Logger.cpp  Logger.h
Src/Backend/curl/: curl_manager.cpp  curl_manager.h
Src/Frontend/: CMakeLists.txt  Frontend_entryPoint.cpp  Frontend_entryPoint.h
Src/Frontend/DataShowView/: DataShowView.cpp  DataShowView.h
Src/Frontend/DataTreeView/: DataTreeView.cpp  DataTreeView.h
Src/Frontend/DownloadPage/: CMakeLists.txt  DownloadPage.cpp  DownloadPage.h
Src/Frontend/LogView/: LogView.cpp  LogView.h
Src/Frontend/MainPage/: MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  mainPage.cpp  mainPage.h
Src/Frontend/Res/: Frame.cpp  Frame.h
